--- a/duchain/CMakeLists.txt
+++ b/duchain/CMakeLists.txt
@@ -6,10 +6,10 @@ include_directories(
     )
     
 set(duchain_SRC
-     declarationbuilder.cpp
-     contextbuilder.cpp
-     typebuilder.cpp
-     usebuilder.cpp
+     builders/declarationbuilder.cpp
+     builders/contextbuilder.cpp
+     builders/typebuilder.cpp
+     builders/usebuilder.cpp
      goducontext.cpp
      expressionvisitor.cpp
      helper.cpp
